<resources>
    <string name="app_name">Geekofia Blog</string>

    <!-- Toolbar -->
    <string name="title_menu_search">Search Posts</string>
    <string name="title_fragment_contact">Support</string>
    <string name="title_fragment_categories">Categories</string>
    <string name="title_fragment_tags">Tags</string>
    <string name="title_fragment_Posts">The Latest</string>

    <!-- Nav Drawer -->
    <string name="title_nav_header">@string/app_name</string>
    <string name="title_nav_version">1.0-alpha</string>
    <string name="title_nav_developer">chankruze</string>
    <string name="title_nav_posts">All Latest Posts</string>
    <string name="title_nav_categories">Group By Categories</string>
    <string name="title_nav_tags">Group By Tags</string>
    <string name="title_nav_donate">Buy Me A Red Bull</string>
    <string name="title_nav_share">Share With Others</string>
    <string name="title_nav_rate">Rate On Playstore</string>
    <string name="title_nav_contact">Have A Chat With Me</string>
    <string name="title_nav_author">Become An Author</string>
    <string name="title_nav_github">View Project On GitHub</string>
    <string name="title_nav_communication">Contact Me</string>
    <string name="title_nav_support">Support Development</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- contact -->
    <string name="contact_to">Writing To&#160;</string>
    <string name="send_button">Send Email</string>
    <string name="contact_header">We Love To Hear From You</string>
    <string name="hint_subject">Subject</string>
    <string name="helper_subject">Tell us why you writing</string>
    <string name="hint_body">Message</string>
    <string name="helper_body">Describe your issue or suggestion in details</string>

    <!-- post menu -->
    <string name="post_menu_copy">copy link</string>
    <string name="post_menu_share">share post</string>

    <string name="button_retry">Retry</string>
    <string name="no_internet_connection">No Internet</string>

    <string name="imageview_desc">Featured post image</string>
</resources>
